Fix transparent background on mobile

--- a/src/components/Dropdown/Dropdown.css
+++ b/src/components/Dropdown/Dropdown.css
@@ -37,6 +37,7 @@
   padding: 0;
   background: #FFF;
   box-shadow: 2px 2px 8px rgba(0, 0, 0, .1), -2px 2px 8px rgba(0, 0, 0, .1);
+  z-index: 5;
 }
 
 .dropdown .show {
